Began work on game flow - game changes turns and renders X or O correctly. Still need to add victory condition

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 <body>
     <div id="tic-tac-toe-board">
         <div id="row-1">
-            <div id="square-1">&nbsp</div>
-            <div id="square-2">&nbsp</div>
-            <div id="square-3">&nbsp</div>
+            <div id="square-0"></div>
+            <div id="square-1"></div>
+            <div id="square-2"></div>
         </div>
         <div id="row-2">
-            <div id="square-4">&nbsp</div>
-            <div id="square-5">&nbsp</div>
-            <div id="square-6">&nbsp</div>
+            <div id="square-3"></div>
+            <div id="square-4"></div>
+            <div id="square-5"></div>
         </div>
         <div id="row-3">
-            <div id="square-7">&nbsp</div>
-            <div id="square-8">&nbsp</div>
-            <div id="square-9">&nbsp</div>
+            <div id="square-6"></div>
+            <div id="square-7"></div>
+            <div id="square-8"></div>
         </div>
     </div>
     <script src="scripts/script.js"></script>
