Began styling page, still need to further style and add js interactivity

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                 <div id="square-7"></div>
                 <div id="square-8"></div>
             </div>
-            <button id="start-game">Start game</button>
+            <div id="button-wrapper">
+                <button id="start-game" disabled>Start game</button>
+            </div>
         </div>
         <div id="player-2" class="player">
             <h2>O's: </h2>
