--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
     <div id="game">
         <div id="player-1" class="player">
-            <h2>X's: </h2>
-            <label for="player-1-name">Enter your name</label>
-            <input name="player-1-name">
+            <h2 id="player-1-name">X's: </h2>
+            <input name="player-1-name" id="player-1-input" placeholder="Enter your name">
         </div>
         <div id="tic-tac-toe-board">
             <div id="row-1">
@@ -29,13 +28,12 @@
                 <div id="square-8"></div>
             </div>
             <div id="button-wrapper">
-                <button id="start-game" disabled>Start game</button>
+                <button id="start-game">Start game</button>
             </div>
         </div>
         <div id="player-2" class="player">
-            <h2>O's: </h2>
-            <label for="player-2-name">Enter your name</label>
-            <input name="player-2-name">
+            <h2 id="player-2-name">O's: </h2>
+            <input name="player-2-name" id="player-2-input" placeholder="Enter your name">
         </div>
     </div>
     <script src="scripts/script.js"></script>
