Added title on page with h1 element, added background gradient for page and a background color for the button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <input name="player-1-name" id="player-1-input" placeholder="Enter your name">
         </div>
         <div id="tic-tac-toe-board">
+            <h1>Tic-tac-toe</h1>
             <div id="row-1">
                 <div id="square-0"></div>
                 <div id="square-1"></div>
